Just using fixed now, anything else is too much.

--- a/www/css/images_scaled.css
+++ b/www/css/images_scaled.css
@@ -27,7 +27,12 @@ background-repeat: repeat;
 div.changerbutton {
     text-align: center;
 }
-
+.icon_image{
+	width:40px;
+}
+.icon_image_tall{
+	height:60px;
+}
 .windowscale-height{
      max-height: 100%;
      max-width: 100%;
